`#include <Windows.h>` with uppercase W breaks cross-compilation
This commit moves an #include <windows.h>
from Source/cmFileLockResult.h
to Source/cmFileLockResult.cxx
, but in the process replaces the lowercase "w" with an uppercase "W", which breaks cross-compilation of CMake from Debian to Windows.
It seems to be an accident; would it be possible to fix the include file name to the all-lowercase form?
Both the master and release branches are affected, as well as the 3.28.0-rc6 version.