Source/cmFileLockResult.cxx
@@ -6,7 +6,7 @@
 #include <cstring>
 
 #ifdef _WIN32
-#  include <Windows.h>
+#  include <windows.h>
 #endif
 
 cmFileLockResult cmFileLockResult::MakeOk()
